2006-10-18  John W. Eaton  <jwe@octave.org>

	* mex.cc (mexUnlock): Don't warn if unlocking a function that is
	not locked.

	* pt-fcn-handle.cc (tree_anon_fcn_handle::dup):
	Correctly duplicate symbol table info.

2006-10-17  Michael Goffioul  <michael.goffioul@swing.be>

	* oct-map.h: Include <algorithm>.

2006-10-16  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_stream_list::do_remove): Handle "all" as a
	special case.

2006-10-13  Michael Goffioul  <michael.goffioul@swing.be>

	* Makefile.in: Adapt rules to use $(LIBPRE).

2006-10-11  John W. Eaton  <jwe@octave.org>

	* mex.h (UINT64_T, uint64_T, INT64_T, int64_T, UINT32_T, uint32_T,
	INT32_T, int32_T, UINT16_T, uint16_T, INT16_T, int16_T, UINT8_T,
	uint8_T, INT8_T, int8_T): Conditionally define.
	From Andy Adler <adler@site.uottawa.ca>.

2006-10-09  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in (OCTAVE_CONF_CURL_LIBS): Substitute.
	* toplev.cc (octave_config_info): Add CURL_LIBS to the list.

2006-10-09  Alexander Barth  <abarth@marine.usf.edu>

	* DLD-FUNCTIONS/urlwrite.cc: New file providing urlwrite and urlread.

2006-10-09  John W. Eaton  <jwe@octave.org>

	* pt-mat.cc (tree_matrix::dup): Append new elements to new matrix.
	* pt-cell.cc (tree_cell::dup): Append new elements to new cell array.

2006-10-04  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.9+.

	* DLD-FUNCTIONS/__gnuplot_raw__.l (F__clear_plot_window__):
	Rename from Fclearplot.  Only clear plot window.

2006-10-03  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/luinc.cc (Fluinc): Avoid crash if SparseLU or
	SparseComplexLU constructor fails.

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx):
	Delete unused variable.

2006-10-03  David Bateman  <dbateman@free.fr>

	* Makefile.in (OCT_LINK_DEPS) Include $(CAMD_LIBS) in the list.
	(octave$(EXEEXT)): Include $(CAMD_LIBS) in link command.

2006-10-02  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.9.